tests/lean/implicit2.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Real'
  Assumed: f
f 10 20 : ℕ
f 10 : ℕ → ℕ
@f : ∀ (A : Type), A → A → A
  Assumed: g
g 10 20 ⊤ : Bool → Bool
let r : ℝ → ℝ → ℝ := g 10 20 in r : ℝ → ℝ → ℝ
implicit2.lean:11:0 error: invalid expression, unexpected token
  Set: lean::pp::implicit
let r : ℝ → ℝ → ℝ := @g ℕ 10 20 ℝ in r : ℝ → ℝ → ℝ
